# streamlit-html-components

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  MIGRATION_V2.md  NEXT_STEPS.md  PROGRESS.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  requirements_deploy.txt  streamlit_app.py  test_bidirectional_basic.py  test_file_watcher_basic.py  test_hot_reload.py  test_integration_v2.py  test_v2_architecture.py  test_v2_basic.py  test_validation_basic.py  validate_v2.py
examples/basic_button/: app.py
examples/basic_button/scripts/: button.js
examples/basic_button/styles/: button.css
examples/basic_button/templates/: button.html
examples/bidirectional/: README.md  demo_advanced.py  demo_counter.py
examples/crud_todo/: README.md  app.py  debug_app.py  minimal_test.py
examples/crud_todo/scripts/: main.js
examples/crud_todo/styles/: styles.css
examples/crud_todo/templates/: index.html
examples/tailwind_card/: app.py
examples/tailwind_card/scripts/: card.js
examples/tailwind_card/styles/: card.css
examples/tailwind_card/templates/: card.html
showcase/: app.py
showcase/scripts/: demo_button.js  examples.js  footer.js  hero.js  installation.js  why.js
showcase/styles/: demo_button.css  examples.css  footer.css  global.css  hero.css  installation.css  why.css
showcase/templates/: demo_button.html  examples.html  footer.html  hero.html  installation.html  why.html
src/streamlit_html_components/: __init__.py  cache_manager.py  exceptions.py  registry.py  security.py  validators.py
src/streamlit_html_components/bidirectional/: __init__.py  bridge.py
tests/: test_security.py
