[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-html-components"
version = "0.1.0"
description = "Use traditional HTML/CSS/JS file structure with Streamlit applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CJ Carito", email = "cjcarito@example.com"}
]
keywords = ["streamlit", "components", "html", "css", "javascript", "web", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Streamlit",
]

dependencies = [
    "streamlit>=1.29.0,<1.51.0",  # CHANGED: Pinned to work with Python 3.8/3.9
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/cjcarito/streamlit-html-components"
Documentation = "https://github.com/cjcarito/streamlit-html-components#readme"
Repository = "https://github.com/cjcarito/streamlit-html-components"
Issues = "https://github.com/cjcarito/streamlit-html-components/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
streamlit_html_components = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/streamlit_html_components --cov-report=html --cov-report=term"